@@ -33,6 +33,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6312: Fixed http HEAD request when the transfer encoding is chunked.
+  It should correctly return an empty response now.
+
 - Issue #8086: In :func:`ssl.DER_cert_to_PEM_cert()`, fix missing newline
   before the certificate footer.  Patch by Kyle VanderBeek.
 
